finished adaptive intro and offering

--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,4 +1,7 @@
-.header__link{
+.header__link {
+    color: rgb(0, 114, 188);
+}
+
+.header__link_last {
     text-decoration: none;
-    color: #FFFFFF;
 }
