--- a/src/blocks/offering/__list/offering__list.css
+++ b/src/blocks/offering/__list/offering__list.css
@@ -1,3 +1,7 @@
-.offering__list{
-    
+.offering__list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
