--- a/src/blocks/header/__lang-link/header__lang-link.css
+++ b/src/blocks/header/__lang-link/header__lang-link.css
@@ -4,13 +4,9 @@
   font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 16px;
+  line-height: 120%;
   color: #ffffff;
-  margin-right: 18px;
-  list-style-type: none;
-  text-decoration: none;
-  display: inline-block;
   list-style: none;
 }
 
@@ -29,8 +25,24 @@
 
 @media screen and (max-width: 767px), screen and (max-device-width: 767px) {
   .header__lang-link {
-    margin-top: 14px;
+    /* margin-top: 14px; */
+    font-size: 14px;
+    line-height: 120%;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .header__lang-link {
+    /* margin-top: 14px; */
     font-size: 18px;
-    line-height: 20px;
+    line-height: 120%;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  .header__lang-link {
+    /* margin-top: 14px; */
+    font-size: 12px;
+    line-height: 120%;
   }
 }
