--- a/src/blocks/header/__list/header__list.css
+++ b/src/blocks/header/__list/header__list.css
@@ -1,8 +1,14 @@
-.header__list{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+.header__list {
+  margin: 0 40px 0 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+@media screen and (max-width: 470px) {
+  .header__list {
+    margin: 0 auto 40px auto;
+  }
 }
