--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,18 +1,28 @@
 .header__logo {
-  margin: 0;
+  margin: 0 0 0 40px;
   padding: 0;
   /*margin-left: 48px;*/
-  background-image: url(../../../images/header-logo.svg);
+  background-image: url(../../../img/logo-color.png);
   background-repeat: no-repeat;
   background-size: contain;
   width: 176px;
   height: 52px;
   box-sizing: border-box;
+  background-position: center;
 }
 
 @media screen and (max-width: 767px), screen and (max-device-width: 767px) {
   .header__logo {
     width: 142px;
     height: 42px;
+  }
+}
+
+
+@media screen and (max-width: 470px){
+  .header__logo {
+    width: 176px;
+    height: 52px;
+    margin: 0 auto 25px auto;
   }
 }
