--- a/src/blocks/offering/__merculov/offering__merculov.css
+++ b/src/blocks/offering/__merculov/offering__merculov.css
@@ -1,3 +1,19 @@
-.offering__merculov{
-    
+.offering__merculov {
+  margin: 0 0 0 40px;
+  padding: 0;
+  max-width: 395px;
+  max-height: 395px;
+  align-self: flex-end;
+}
+
+@media screen and (max-width: 1050px) {
+  .offering__merculov {
+    max-width: 295px;
+    max-height: 295px;
+  }
+}
+@media screen and (max-width: 890px) {
+  .offering__merculov {
+    display: none;
+  }
 }
