--- a/src/blocks/offering/__plus/offering__plus.css
+++ b/src/blocks/offering/__plus/offering__plus.css
@@ -1,3 +1,14 @@
 .offering__plus{
-    
+  margin: 0 0 20px 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  
+
+}
+
+.offering__plus:last-of-type{
+  margin: 0 0 30px 0;
 }
