--- a/src/blocks/offering/__text/offering__text.css
+++ b/src/blocks/offering/__text/offering__text.css
@@ -1,3 +1,11 @@
-.offering__text{
-    
+.offering__text {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+}
+
+@media screen and (max-width: 890px) {
+  .offering__text {
+    font-size: 14px;
+  }
 }
