--- a/src/blocks/offering/offering.css
+++ b/src/blocks/offering/offering.css
@@ -1,3 +1,16 @@
-.offering{
-    
+.offering {
+  margin: 0 40px;
+  padding: 0;
+  max-width: calc(100% - 80px);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+}
+
+@media screen and (max-width: 890px) {
+  .offering {
+    max-width: calc(100% - 40px);
+    margin: 0 20px;
+  }
 }
