--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -9,7 +9,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #2A2C2F;
+    background-color: #ffffff;
+    border: 1px solid red;
 }
 
 @media screen and (max-width: 1279px), screen and (max-device-width: 1279px){
