--- a/src/blocks/telegramm-link/telegramm-link.css
+++ b/src/blocks/telegramm-link/telegramm-link.css
@@ -1,3 +1,36 @@
-.telegramm-link{
-    
+.telegramm-link {
+  margin: 0;
+  padding: 17px 34px;
+  width: 330px;
+  height: 67px;
+  font-size: 14px;
+  justify-self: center;
+  align-self: center;
+
+  background-color: rgb(22, 102, 241);
+  border-top-left-radius: 5 px;
+  border-top-right-radius: 5 px;
+  border-bottom-right-radius: 5 px;
+  border-bottom-left-radius: 5 px;
+  border-style: solid;
+  border-top-width: 0 px;
+  border-bottom-width: 0 px;
+  border-left-width: 0 px;
+  border-right-width: 0 px;
+  border-color:  rgb(22, 102, 241);
+  padding-top: 17 px;
+  padding-bottom: 17 px;
+  padding-left: 34 px;
+  padding-right: 34 px;
+  font-size: 22px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  box-shadow: 0px 4px 10px 0px rgb(22 102 241 / 50%);
+  border-radius: 6px;
+}
+
+.telegramm-link:hover {
+  cursor: pointer;
+  background-color: rgb(12, 85, 211);
+  border-color:  rgb(12, 85, 211);
 }
