--- a/src/blocks/how-it-works/__step/how-it-works__step.css
+++ b/src/blocks/how-it-works/__step/how-it-works__step.css
@@ -1,3 +1,20 @@
-.how-it-works__step{
-    
+.how-it-works__step {
+  margin: 0 0 19px 0;
+  padding: 5px;
+  /* box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 50%), 0px 0px 5px 0px rgba(0 0 0 / 50%); */
+  box-shadow: 0px 2px 5px 0px rgba(0 0 0 / 40%);
+  border-radius: 5px;
+  padding-top: 5 px;
+  padding-right: 5 px;
+  padding-bottom: 5 px;
+  padding-left: 5 px;
+  border-radius: 8 px;
+}
+
+.how-it-works__step:last-of-type{
+  margin: 0;
+}
+
+.how-it-works__step::before{
+  background-image: url(../../../img/star.jpg);
 }
