--- a/src/blocks/how-it-works/__steps/how-it-works__steps.css
+++ b/src/blocks/how-it-works/__steps/how-it-works__steps.css
@@ -1,3 +1,9 @@
 .how-it-works__steps{
-    
+    margin: 0 auto;
+    padding: 0;
+    max-width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    list-style: none;
 }
