--- a/src/blocks/how-it-works/how-it-works.css
+++ b/src/blocks/how-it-works/how-it-works.css
@@ -1,3 +1,8 @@
 .how-it-works{
-    
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
