--- a/src/blocks/instruction/__foto/instruction__foto.css
+++ b/src/blocks/instruction/__foto/instruction__foto.css
@@ -1,3 +1,11 @@
-.instruction__foto{
-    
+.instruction__foto {
+  margin: 0 40px 0 0;
+  padding: 0;
+}
+
+@media screen and (max-width: 780px) {
+  .instruction__foto {
+    margin: 0 0 20px 0;
+    padding: 0;
+  }
 }
