--- a/src/blocks/instruction/__text/instruction__text.css
+++ b/src/blocks/instruction/__text/instruction__text.css
@@ -1,3 +1,14 @@
 .instruction__text{
-    
+  margin: 0;
+  padding: 0;
+  font-size: 22px;
+}
+
+@media screen and (max-width: 780px) {
+  .instruction__text{
+    margin: 0 auto;
+    padding: 0;
+    font-size: 18px;
+    justify-self: center;
+  }
 }
