--- a/src/blocks/instruction/instruction.css
+++ b/src/blocks/instruction/instruction.css
@@ -1,3 +1,26 @@
-.instruction{
-    
+.instruction {
+  margin: 0 auto 65px auto;
+  padding: 7px;
+  color: #333;
+  border-radius: 10px;
+  border-width: 0.5px;
+  border-style: solid;
+  border-color: rgb(22, 102, 241);
+  box-shadow: 0px 2px 5px 0px rgb(0 0 0 / 50%);
+  width: 715px;
+  height: 165px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (max-width: 780px) {
+  .instruction {
+    margin: 0 auto 45px auto;
+    flex-direction: column;
+    width: calc(100% - 40px);
+    height: 320px;
+    justify-content: space-evenly;
+  }
 }
